--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 
-<h1>Kółko i Krzyżyk</h1>
+<h1>Kółko i Krzyżyk SOON</h1>
 
 <canvas id="game" width="600" height="600"></canvas>
 
