--- a/index.html
+++ b/index.html
@@ -5,161 +5,167 @@
   <title>Wąż - Gra</title>
   <style>
     body {
-      background-color: #000;
+      background-color: #111;
       margin: 0;
       padding: 0;
+      font-family: Arial, sans-serif;
+      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
-      color: white;
     }
-    h1 {
-      align-self: flex-start;
-      margin: 20px;
-      font-size: 36px;
+    header {
+      display: flex;
+      width: 100%;
+      align-items: center;
+      padding: 10px;
+      background: #222;
     }
-    a {
-      align-self: flex-start;
+    header h1 {
+      margin: 0;
       margin-left: 20px;
-      margin-bottom: 20px;
-      font-size: 20px;
-      color: cyan;
-      text-decoration: underline;
+      color: white;
+      font-size: 28px;
     }
     #gameContainer {
+      margin-top: 30px;
       position: relative;
-      background-color: #222;
-      margin-top: 10px;
     }
     canvas {
-      background-color: #111;
+      background-color: #000;
+      border: 4px solid white;
       display: block;
-      margin: 0 auto;
+      margin: auto;
     }
     #resetBtn {
-      margin-top: 10px;
+      margin-top: 20px;
       padding: 10px 20px;
-      background-color: green;
+      background-color: darkred;
       color: white;
       border: none;
       font-size: 18px;
       cursor: pointer;
       border-radius: 10px;
     }
-    #record {
+    #scoreBoard {
       margin-top: 10px;
       font-size: 20px;
+    }
+    a {
+      color: red;
+      text-decoration: none;
+      margin-top: 20px;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
 
-<h1>Kółko i Krzyżyk</h1>
-<a href="kolkoikrzyzyk.html">Zagraj w Kółko i Krzyżyk</a>
+<header>
+  <h1>Kółko i Krzyżyk</h1>
+</header>
 
 <div id="gameContainer">
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
+  <canvas id="gameCanvas" width="450" height="450"></canvas>
 </div>
 
-<button id="resetBtn" onclick="resetGame()">Resetuj</button>
-<div id="record">Najlepszy wynik: 0</div>
+<button id="resetBtn" onclick="resetGame()">Resetuj grę</button>
 
-<audio id="eatSound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg"></audio>
+<div id="scoreBoard">Wynik: 0 | Rekord: 0</div>
+
+<a href="kolkoikrzyzyk.html">Zagraj w Kółko i Krzyżyk</a>
+
+<audio id="eatSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
 
 <script>
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
-  const box = 20;
-  const canvasSize = 400;
-  let snake;
-  let direction;
-  let skull;
-  let score;
-  let highScore = 0;
   const eatSound = document.getElementById('eatSound');
+  const box = 30;
+  const canvasSize = 450;
+  let snake = [];
+  snake[0] = {x: 7 * box, y: 7 * box};
+  let direction = null;
+  let skull = generateSkull();
+  let score = 0;
+  let highScore = 0;
+  let game;
 
-  document.addEventListener('keydown', directionControl);
+  document.addEventListener("keydown", directionChange);
 
-  function initGame() {
-    snake = [{x: 160, y: 200}];
-    direction = "RIGHT";
-    skull = randomPosition();
-    score = 0;
+  function directionChange(event) {
+    if (event.keyCode == 37 && direction != "RIGHT")
+      direction = "LEFT";
+    else if (event.keyCode == 38 && direction != "DOWN")
+      direction = "UP";
+    else if (event.keyCode == 39 && direction != "LEFT")
+      direction = "RIGHT";
+    else if (event.keyCode == 40 && direction != "UP")
+      direction = "DOWN";
   }
 
-  function directionControl(event) {
-    if (event.key === "ArrowLeft" && direction !== "RIGHT") direction = "LEFT";
-    else if (event.key === "ArrowUp" && direction !== "DOWN") direction = "UP";
-    else if (event.key === "ArrowRight" && direction !== "LEFT") direction = "RIGHT";
-    else if (event.key === "ArrowDown" && direction !== "UP") direction = "DOWN";
-  }
-
-  function randomPosition() {
-    let pos;
+  function generateSkull() {
+    let skullX, skullY;
     do {
-      pos = {
-        x: Math.floor(Math.random() * (canvasSize/box - 2) + 1) * box,
-        y: Math.floor(Math.random() * (canvasSize/box - 2) + 1) * box
-      };
-    } while (pos.x <= 0 || pos.x >= canvasSize - box || pos.y <= 0 || pos.y >= canvasSize - box);
-    return pos;
+      skullX = Math.floor(Math.random() * (canvasSize / box)) * box;
+      skullY = Math.floor(Math.random() * (canvasSize / box)) * box;
+    } while (skullX == 0 || skullY == 0 || skullX == canvasSize - box || skullY == canvasSize - box);
+    return {x: skullX, y: skullY};
   }
 
   function draw() {
-    ctx.fillStyle = "#111";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
 
-    // Snake
     for (let i = 0; i < snake.length; i++) {
-      ctx.fillStyle = (i === 0) ? "lime" : "lightgreen";
+      ctx.fillStyle = (i == 0) ? "lime" : "green";
       ctx.fillRect(snake[i].x, snake[i].y, box, box);
-      ctx.strokeStyle = "darkgreen";
+
+      ctx.strokeStyle = "#111";
       ctx.strokeRect(snake[i].x, snake[i].y, box, box);
     }
 
-    // Skull (flashing effect)
-    ctx.fillStyle = Math.random() > 0.5 ? "white" : "red";
-    ctx.font = "24px Arial";
-    ctx.fillText("☠", skull.x + 2, skull.y + 24);
+    ctx.beginPath();
+    ctx.fillStyle = "white";
+    ctx.font = "20px Arial";
+    ctx.fillText("☠️", skull.x + 5, skull.y + 25);
 
     let snakeX = snake[0].x;
     let snakeY = snake[0].y;
 
-    if (direction === "LEFT") snakeX -= box;
-    if (direction === "UP") snakeY -= box;
-    if (direction === "RIGHT") snakeX += box;
-    if (direction === "DOWN") snakeY += box;
+    if (direction == "LEFT") snakeX -= box;
+    if (direction == "UP") snakeY -= box;
+    if (direction == "RIGHT") snakeX += box;
+    if (direction == "DOWN") snakeY += box;
 
-    if (snakeX === skull.x && snakeY === skull.y) {
+    if (snakeX == skull.x && snakeY == skull.y) {
       score++;
       eatSound.currentTime = 0;
       eatSound.play();
-      if (score > highScore) {
-        highScore = score;
-        document.getElementById('record').innerText = "Najlepszy wynik: " + highScore;
-      }
-      skull = randomPosition();
+      skull = generateSkull();
     } else {
       snake.pop();
     }
 
-    const newHead = {x: snakeX, y: snakeY};
+    let newHead = {
+      x: snakeX,
+      y: snakeY
+    };
 
     if (snakeX < 0 || snakeX >= canvasSize || snakeY < 0 || snakeY >= canvasSize || collision(newHead, snake)) {
-      resetGame();
+      clearInterval(game);
+      if (score > highScore) highScore = score;
+      document.getElementById('scoreBoard').innerText = `Wynik: ${score} | Rekord: ${highScore}`;
       return;
     }
 
     snake.unshift(newHead);
+
+    document.getElementById('scoreBoard').innerText = `Wynik: ${score} | Rekord: ${highScore}`;
   }
 
   function collision(head, array) {
     for (let i = 0; i < array.length; i++) {
-      if (head.x === array[i].x && head.y === array[i].y) {
+      if (head.x == array[i].x && head.y == array[i].y) {
         return true;
       }
     }
@@ -167,11 +173,17 @@
   }
 
   function resetGame() {
-    initGame();
+    clearInterval(game);
+    snake = [];
+    snake[0] = {x: 7 * box, y: 7 * box};
+    direction = null;
+    skull = generateSkull();
+    score = 0;
+    document.getElementById('scoreBoard').innerText = `Wynik: 0 | Rekord: ${highScore}`;
+    game = setInterval(draw, 200); // zmniejszona prędkość (wolniejsza gra)
   }
 
-  initGame();
-  setInterval(draw, 200);
+  resetGame();
 </script>
 
 </body>
