--- a/index.html
+++ b/index.html
@@ -2,65 +2,80 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Wąż - Gra</title>
+  <title>Snake - Gra w Węża</title>
   <style>
     body {
-      background-color: #111;
+      background-color: #0d0d0d;
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #eee;
       display: flex;
       flex-direction: column;
-      align-items: center;
     }
     header {
-      display: flex;
       width: 100%;
+      background: linear-gradient(to right, #222, #111);
+      padding: 15px;
+      display: flex;
       align-items: center;
-      padding: 10px;
-      background: #222;
+      box-shadow: 0px 2px 10px black;
+      justify-content: space-between;
     }
     header h1 {
       margin: 0;
       margin-left: 20px;
-      color: white;
       font-size: 28px;
+    }
+    header nav {
+      margin-right: 20px;
+    }
+    header nav a {
+      color: red;
+      text-decoration: none;
+      font-size: 20px;
+      margin-left: 20px;
+    }
+    header nav a:hover {
+      text-decoration: underline;
     }
     #gameContainer {
       margin-top: 30px;
-      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     canvas {
       background-color: #000;
-      border: 4px solid white;
+      border: 5px solid #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 20px lime;
       display: block;
-      margin: auto;
     }
     #resetBtn {
       margin-top: 20px;
-      padding: 10px 20px;
-      background-color: darkred;
+      padding: 12px 24px;
+      background: linear-gradient(to right, darkred, red);
       color: white;
       border: none;
-      font-size: 18px;
+      font-size: 20px;
+      font-weight: bold;
       cursor: pointer;
-      border-radius: 10px;
+      border-radius: 12px;
+      transition: background 0.3s;
+    }
+    #resetBtn:hover {
+      background: linear-gradient(to right, red, darkred);
     }
     #scoreBoard {
       margin-top: 10px;
-      font-size: 20px;
+      font-size: 22px;
+      font-weight: bold;
+      color: #0f0;
     }
-    a {
-      color: red;
-      text-decoration: none;
-      margin-top: 20px;
-      font-size: 18px;
-    }
-    /* Migotanie czaszki */
     @keyframes blink {
       0% { opacity: 1; }
-      50% { opacity: 0.3; }
+      50% { opacity: 0.4; }
       100% { opacity: 1; }
     }
     .skull {
@@ -71,29 +86,30 @@
 <body>
 
 <header>
-  <h1>Kółko i Krzyżyk</h1>
+  <div>
+    <h1>Kółko i Krzyżyk</h1>
+    <nav>
+      <a href="kolkoikrzyzyk.html">Zagraj w Kółko i Krzyżyk</a>
+    </nav>
+  </div>
 </header>
 
 <div id="gameContainer">
-  <canvas id="gameCanvas" width="300" height="300"></canvas>
+  <canvas id="gameCanvas" width="450" height="450"></canvas>
+  <button id="resetBtn" onclick="resetGame()">Resetuj grę</button>
+  <div id="scoreBoard">Wynik: 0 | Rekord: 0</div>
 </div>
 
-<button id="resetBtn" onclick="resetGame()">Resetuj grę</button>
-
-<div id="scoreBoard">Wynik: 0 | Rekord: 0</div>
-
-<a href="kolkoikrzyzyk.html">Zagraj w Kółko i Krzyżyk</a>
-
-<audio id="eatSound" src="https://actions.google.com/sounds/v1/cartoon/wood_plank_flicks.ogg"></audio>
+<audio id="eatSound" src="https://actions.google.com/sounds/v1/cartoon/pop.ogg"></audio>
 
 <script>
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
   const eatSound = document.getElementById('eatSound');
   const box = 30;
-  const canvasSize = 300;
+  const canvasSize = 450;
   let snake = [];
-  snake[0] = {x: 5 * box, y: 5 * box};
+  snake[0] = {x: 7 * box, y: 7 * box};
   let direction = null;
   let skull = generateSkull();
   let score = 0;
@@ -103,13 +119,13 @@
   document.addEventListener("keydown", directionChange);
 
   function directionChange(event) {
-    if (event.keyCode == 37 && direction != "RIGHT")
+    if (event.keyCode === 37 && direction !== "RIGHT")
       direction = "LEFT";
-    else if (event.keyCode == 38 && direction != "DOWN")
+    else if (event.keyCode === 38 && direction !== "DOWN")
       direction = "UP";
-    else if (event.keyCode == 39 && direction != "LEFT")
+    else if (event.keyCode === 39 && direction !== "LEFT")
       direction = "RIGHT";
-    else if (event.keyCode == 40 && direction != "UP")
+    else if (event.keyCode === 40 && direction !== "UP")
       direction = "DOWN";
   }
 
@@ -126,10 +142,10 @@
     ctx.clearRect(0, 0, canvas.width, canvas.height);
 
     for (let i = 0; i < snake.length; i++) {
-      ctx.fillStyle = (i == 0) ? "lime" : "green";
+      ctx.fillStyle = (i === 0) ? "lime" : "#00cc00";
       ctx.fillRect(snake[i].x, snake[i].y, box, box);
 
-      ctx.strokeStyle = "#111";
+      ctx.strokeStyle = "#000";
       ctx.strokeRect(snake[i].x, snake[i].y, box, box);
     }
 
@@ -140,12 +156,12 @@
     let snakeX = snake[0].x;
     let snakeY = snake[0].y;
 
-    if (direction == "LEFT") snakeX -= box;
-    if (direction == "UP") snakeY -= box;
-    if (direction == "RIGHT") snakeX += box;
-    if (direction == "DOWN") snakeY += box;
+    if (direction === "LEFT") snakeX -= box;
+    if (direction === "UP") snakeY -= box;
+    if (direction === "RIGHT") snakeX += box;
+    if (direction === "DOWN") snakeY += box;
 
-    if (snakeX == skull.x && snakeY == skull.y) {
+    if (snakeX === skull.x && snakeY === skull.y) {
       score++;
       eatSound.currentTime = 0;
       eatSound.play();
@@ -154,35 +170,49 @@
       snake.pop();
     }
 
-    let newHead = { x: snakeX, y: snakeY };
+    let newHead = {x: snakeX, y: snakeY};
 
     if (snakeX < 0 || snakeX >= canvasSize || snakeY < 0 || snakeY >= canvasSize || collision(newHead, snake)) {
       clearInterval(game);
       if (score > highScore) highScore = score;
-      document.getElementById('scoreBoard').innerText = `Wynik: ${score} | Rekord: ${highScore}`;
+      updateScore();
       return;
     }
 
     snake.unshift(newHead);
 
-    document.getElementById('scoreBoard').innerText = `Wynik: ${score} | Rekord: ${highScore}`;
+    updateScore();
   }
 
   function collision(head, array) {
     for (let i = 0; i < array.length; i++) {
-      if (head.x == array[i].x && head.y == array[i].y) {
+      if (head.x === array[i].x && head.y === array[i].y) {
         return true;
       }
     }
     return false;
   }
 
+  function updateScore() {
+    document.getElementById('scoreBoard').innerText = `Wynik: ${score} | Rekord: ${highScore}`;
+  }
+
   function resetGame() {
     clearInterval(game);
     snake = [];
-    snake[0] = {x: 5 * box, y: 5 * box};
+    snake[0] = {x: 7 * box, y: 7 * box};
     direction = null;
     skull = generateSkull();
+    score = 0;
+    updateScore();
+    game = setInterval(draw, 200);
+  }
+
+  resetGame();
+</script>
+
+</body>
+</html>
     score = 0;
     document.getElementById('scoreBoard').innerText = `Wynik: 0 | Rekord: ${highScore}`;
     game = setInterval(draw, 150); // prędkość ruchu (wolniejsza)
